<resources>
    <string name="app_name">Plant Disease AI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_text">Take picture of plant to detect disease</string>
    <string name="upload_image_text">Select image from gallery</string>
    <string name="faq_text">Frequently asked questions</string>
    <string name="faqs">FAQs</string>
    <string name="about_app">About app</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="analyze_image">Analyze Image</string>
    <string name="camera_how_quest">How to use my camera for analysis</string>
    <string name="camera_how_ans">Back on the home screen, click on the very first tab to the left with the camera icon. </string>
    <string name="gallery_how_quest">How to upload an image for analysis</string>
    <string name="gallery_how_ans">Back on the home screen, click on the second tab to the right with the upload (arrow) icon. </string>
</resources>
