<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/onBoardingFragment">

    <fragment
        tools:layout="@layout/fragment_home"
        android:id="@+id/homeFragment"
        android:name="com.example.plantdiseaseai.ui.home.HomeFragment"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_homeFragment_to_cameraFragment"
            app:destination="@id/cameraFragment" />
        <action
            android:id="@+id/action_homeFragment_to_galleryFragment"
            app:destination="@id/galleryFragment" />
        <action
            android:id="@+id/action_homeFragment_to_aboutAppFragment"
            app:destination="@id/aboutAppFragment" />
        <action
            android:id="@+id/action_homeFragment_to_faqFragment"
            app:destination="@id/faqFragment" />
    </fragment>
    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.example.plantdiseaseai.ui.camera.CameraFragment"
        android:label="@string/camera" >
        <action
            android:id="@+id/action_cameraFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/aboutAppFragment"
        android:name="com.example.plantdiseaseai.ui.aboutapp.AboutAppFragment"
        android:label="@string/about_app" />
    <fragment
        android:id="@+id/faqFragment"
        android:name="com.example.plantdiseaseai.ui.faq.FaqFragment"
        android:label="@string/faqs" />
    <fragment
        android:id="@+id/galleryFragment"
        android:name="com.example.plantdiseaseai.ui.gallery.GalleryFragment"
        android:label="@string/gallery" />
    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="com.example.plantdiseaseai.ui.onboarding.OnBoardingFragment"
        android:label="fragment_on_boarding"
        tools:layout="@layout/fragment_on_boarding" >
        <action
            android:id="@+id/action_onBoardingFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/onBoardingFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>