<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_header" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/camera_grid"
                style="@style/GridCardViews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    style="@style/GridLayoutImage"
                    android:src="@drawable/ic_camera" />

                <TextView
                    style="@style/GridLayoutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_text" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/gallery_grid"
                style="@style/GridCardViews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    style="@style/GridLayoutImage"
                    android:src="@drawable/ic_file_upload" />

                <TextView
                    style="@style/GridLayoutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_image_text" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/faq_grid"
                style="@style/GridCardViews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    style="@style/GridLayoutImage"
                    android:src="@drawable/ic_faq" />

                <TextView
                    style="@style/GridLayoutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/faq_text" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/about_app_grid"
                style="@style/GridCardViews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    style="@style/GridLayoutImage"
                    android:src="@drawable/ic_info" />

                <TextView
                    style="@style/GridLayoutText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_app" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>